--- a/index.html
+++ b/index.html
@@ -14,5 +14,28 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.4/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.9.4/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyCM2X5OFG9nfjhgJrd3e8iiojSIC5FNQTo",
+        authDomain: "thetonle.firebaseapp.com",
+        projectId: "thetonle",
+        storageBucket: "thetonle.appspot.com",
+        messagingSenderId: "831997276695",
+        appId: "1:831997276695:web:8d502a08366650dfafe252",
+        measurementId: "G-CKL51700FR"
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
   </body>
 </html>
